# 42cursus-template

./: .gitignore  CMakeLists.txt  Makefile.exe.template  Makefile.lib.template  README.md  README.template  run.sh
include/: {{project_name}}.h
src/: {{project_name}}.c
